# anima2

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
anima2/: __init__.py  __main__.py  _textindex.py  agent.py  body.py  capabilities.py  capability_cognition.py  chronicle.py  circuit_breaker.py  cliloc.py  cognition.py  contract.py  control.py  create_world.py  curriculum.py  fleet.py  forum.py  geometry.py  goals.py  ipc_body.py  live.py  live_bank_goal.py  live_buy_goal.py  live_chronicle.py  live_cognition_eval_gate.py  live_common.py  live_craft_goal.py  live_curriculum.py  live_curriculum_goal.py  live_eval_gate.py  live_evolve_gate.py  live_fitness_gate.py  live_forum_chronicle.py  live_goal_stack.py  live_hunt.py  live_market.py  live_mine.py  live_navigate.py  live_persistent_lives.py  live_reconnect.py  (+23 more)
docs/: AUTONOMY-ROADMAP.md  DESIGN.md  LUMBER-CARPENTER-TINKER.md  PHASE2.md  PHASE3.md  PHASE4.md  PHASE5.md  PHASE6.md  PHASE7.md  SWORD-WARRIOR.md
tests/: fake_agent.py  test_agent_loop.py  test_boardtrade.py  test_capabilities.py  test_capability_cognition.py  test_carpentry.py  test_chronicle.py  test_circuit_breaker.py  test_cliloc.py  test_cognition.py  test_contract.py  test_control.py  test_craft.py  test_curriculum.py  test_curriculum_goals.py  test_forum.py  test_foundry_archive.py  test_foundry_descriptor.py  test_foundry_eval.py  test_foundry_evolve.py  test_foundry_filelock.py  test_foundry_fitness.py  test_foundry_import_guard.py  test_foundry_trajectory.py  test_goal_stack.py  test_harvest.py  test_hunt.py  test_ipc_body.py  test_llm.py  (+25 more)
(+30 files in other folders)
