[project]
name = "anima2"
version = "0.0.0"
description = "Autonomous AI agent that plays Ultima Online — the Brain, on top of anima-core."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
]

[project.urls]
Repository = "https://github.com/hulryung-uo/anima2"
"Body (anima-core)" = "https://github.com/hulryung-uo/anima-client"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]
llm = [
    "anthropic>=0.40",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["anima2"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
